--- a/tcg_companion/templates/app1/collection.html
+++ b/tcg_companion/templates/app1/collection.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% load static %}
-        {% load bootstrap4 %}
-        <meta charset="utf-8">
-        <title>TCG Companion</title>
-        {% include "bootstrap.html" %}
-        <link rel="stylesheet" href="{% static 'pokemon.css' %}?v=1.01"/>
-    </head>
-    <body style ="background-color: #2c2c2c; color: #f5f5f5;">
-        {% include "navigation.html" %}
-        <h1>Welcome To Your Collection</h1>
-        <div class="text-center">
-            <div style ="display: inline-block;">
-                <img src="{% static '201-v-2534047325.png' %}" alt="Unown V" class="unownv">
-                <img src="{% static 'pokemon-logo.png' %}" alt="Pokémon Logo" class="logo">
-                <img src="{% static 'unown-j-918977700.png' %}" alt="Unown J" class="unownj">
-            </div>
-        </div>
 
-        {% if entries %}
-            <div class="image-matrix">
-                {% for entry in entries %}
-                    <img src="{{ entry.card.image }}" alt="{{ entry.card.name }}" class="Gallery img-fluid" style="display: none;">
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% if count > 6 %}
-        <div class="text-center my-3">
-            <button class="btn btn-secondary" onclick="changeImage(-6)">Previous</button>
-            <button class="btn btn-secondary" onclick="changeImage(6)">Next</button>
-        </div>
-        {% endif %}
-        <script src="{% static 'gallery.js' %}?v=1.0"></script>
-        <script> gallery()</script>
-        <div class="jumbotron py-4 search" style="background-color: #000000;">
+<head>
+    {% load static %}
+    {% load bootstrap4 %}
+    {% include "bootstrap.html" %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TCG Companion</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}?v=1.01" />
+    <script src="{% static 'gallery.js' %}?v=1.0"></script>
+</head>
+
+<body>
+    {% include "navigation.html" %}
+
+    <div id="card-search" class="container">
+        <div class="jumbotron py-4 search">
+            <h1>Add to Collection</h1>
             <form method="POST">
                 {% csrf_token %}
                 {% bootstrap_form search_card_form %}
                 <button type="submit" class="btn btn-primary">Add Card</button>
-                <button type="submit" class="btn btn-primary" name="delete">Delete Card</button>
             </form>
         </div>
-    </body>
+    </div>
+
+    {% if entries %}
+    <div class="card-matrix">
+        {% for entry in entries %}
+        <div class="square">
+            <div class="image-wrapper">
+                <img src="{{ entry.card.image }}" alt="{{ entry.card.name }}">
+            </div>
+            <div class="button-wrapper">
+                <form method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="card-name" value="{{ entry.card.name }}">
+                    <input type="hidden" name="card-number" value="{{ entry.card.number }}">
+                    <button class="btn btn-primary" name="delete">Delete</button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    {% if count > 6 %}
+    <div class="text-center my-3">
+        <button class="btn btn-secondary" onclick=changeImage(-6)>Previous</button>
+        <button class="btn btn-secondary" onclick=changeImage(6)>Next</button>
+    </div>
+    {% endif %}
+
+    <script>displayGallery()</script>
+</body>
+
 </html>
