--- a/tcg_companion/templates/app1/home.html
+++ b/tcg_companion/templates/app1/home.html
@@ -4,25 +4,27 @@
 <head>
     {% load static %}
     {% load bootstrap4 %}
-    <meta charset="utf-8">
-    <title>HTML TCG Companion</title>
     {% include "bootstrap.html" %}
-    <link rel="stylesheet" href="{% static 'pokemon.css' %}?v=1.01" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TCG Companion</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}?v=1.01" />
 </head>
 
-<body style ="background-color: #2c2c2c; color: #f5f5f5;">
+<body>
     {% include "navigation.html" %}
-    <h1>Welcome To TCG Companion</h1>
-    <div class="text-center">
-        <div style ="display: inline-block;">
-            <img src="{% static '201-v-2534047325.png' %}" alt="Unown V" class="unownv">
-            <img src="{% static 'pokemon-logo.png' %}" alt="Pokémon Logo" class="logo">
-            <img src="{% static 'unown-j-918977700.png' %}" alt="Unown J" class="unownj">
+    <div id="square-container" class="container">
+        <div class="square">
+            <h3>Card Deck</h3>
+            <p>Organize your cards into strategic decks ready for battle.</p>
+            <a href="/deck" class="btn btn-primary">Check Deck</a>
+        </div>
+        <div class="square">
+            <h3>Card Collection</h3>
+            <p>Curate your collection with your favorite cards from various sets.</p>
+            <a href="/collection" class="btn btn-primary">Check Collection</a>
         </div>
     </div>
-
-    <div class="buttons">
-        <a href="deck" class="btn btn-primary">Start a Deck</a>
-        <a href="collection" class="btn btn-primary">Start a Collection</a>
-    </div>
 </body>
+
+</html>
