--- a/tcg_companion/templates/app1/rules.html
+++ b/tcg_companion/templates/app1/rules.html
@@ -4,28 +4,31 @@
 <head>
     {% load static %}
     {% load bootstrap4 %}
-    <meta charset="utf-8">
-    <title>HTML TCG Companion</title>
     {% include "bootstrap.html" %}
-    <link rel="stylesheet" href="{% static 'pokemon.css' %}?v=1.01" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TCG Companion</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}?v=1.01" />
 </head>
 
-<body style ="background-color: #2c2c2c; color: #f5f5f5;">
+<body>
     {% include "navigation.html" %}
-    <h1>How to Build a Deck</h1>
-    <div class="text-center">
-        <div style ="display: inline-block;">
-            <img src="{% static '201-v-2534047325.png' %}" alt="Unown V" class="unownv">
-            <img src="{% static 'pokemon-logo.png' %}" alt="Pokémon Logo" class="logo">
-            <img src="{% static 'unown-j-918977700.png' %}" alt="Unown J" class="unownj">
-        </div>
-    </div>
-    <div class = "jumbotron, margin" >
-        <p> 
-            The basic rules of creating a Pokemon deck is you need to have exactly 60 cards. Does not matter how many cards of what you have but it is reccomended to have 15-20 Pokemon, 15-19 Energy, and 13-20 trainers. 
-            You want to have only 1-2 types of cards such so you do not need many energy types and you want to have trainers that allow you to draw cards and boost attacks of your cards.
-            Source: <a href = https://www.wikihow.com/Build-a-Pok%C3%A9mon-Deck> "How to Create a Powerful Pokémon TCG Deck" from wikiHow </a>
+    <div class="container">
+        <h1>How to Build a Deck</h1>
+        <p>
+            You need to have exactly 60 cards to begin building a Pokemon deck. There is no limit to the number
+            of cards of each type that you have in your deck, but it is recommended to have 15-20 Pokemon,
+            15-19 Energy, and 13-20 Trainers. You only want to have 1-2 types of cards so that you
+            do not need many energy types and you want to have trainers that allow you to draw cards and boost
+            attacks of your cards.
+        </p>
+        <p>
+            Source:
+            <a class="source-link" href=https://www.wikihow.com/Build-a-Pok%C3%A9mon-Deck>
+                "How to Create a Powerful Pokémon TCG Deck"
+            </a>
         </p>
     </div>
 </body>
+
 </html>
