--- a/tcg_companion/templates/navigation.html
+++ b/tcg_companion/templates/navigation.html
@@ -1,32 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">TCG Companion</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/deck">Deck</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/collection">Collection</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/about/">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/rules/">How to Play</a>
-            </li>
-            {% if user.is_authenticated %}
-            <li>
-                <a class="nav-link" href="/logout/">Logout ({{user.username}})</a>
-            </li>
-            {% else %}
-            <li>
-                <a class="nav-link" href="/login/">Login</a>
-            </li>
-            {% endif %}
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-            <li class="nav-item">
-                <a class="nav-link" href="/admin" target="_blank">Admin</a>
-            </li>
+<body>
+    <div class="banner">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="/">TCG Companion</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    {% if request.path == "/deck/" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/collection/">Collection</a>
+                    </li>
+                    {% elif request.path == "/collection/" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/deck/">Deck</a>
+                    </li>
+                    {% endif %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about/">About</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/rules/">How to Play</a>
+                    </li>
+
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout/">Logout</a>
+                    </li>
+                    {% endif %}
+
+                    {% if user.username == "admin" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin" target="_blank">Admin</a>
+                    </li>
+                    {% endif %}
+            </div>
+        </nav>
     </div>
-</nav>
+</body>
+
+</html>
